<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:orderInCategory="90"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_notification"
        android:icon="@mipmap/icon3"
        android:title="@string/menu_notifications"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@mipmap/icon1"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

   <!-- <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/menu_about_us"
        app:showAsAction="never" />-->
</menu>