<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical">

    <include
        android:id="@+id/layout"
        layout="@layout/header_toolbar"/>
    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gray_background"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_owner_phone_str"
                    android:textColor="@color/black_text" />


                <EditText
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/add_owner_hint_num_str"
                    android:textColor="@color/gray_text"
                    android:phoneNumber="true"
                    android:textSize="14sp"
                    android:id="@+id/phone_num_txt" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_owner_name_str"
                    android:textColor="@color/black_text" />

                <EditText
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/add_owner_hint_name_str"
                    android:textColor="@color/gray_text"
                    android:textSize="14sp"
                    android:id="@+id/name_txt" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_owner_sex_str"
                    android:textColor="@color/black_text" />


                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"

                    >

                    <RadioButton
                        android:id="@+id/radio_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textColor="@color/gray_text"
                        android:text="@string/add_owner_man_str" />

                    <RadioButton
                        android:id="@+id/radio_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray_text"
                        android:text="@string/add_owner_woman_str"
                        android:checked="false" />


                </RadioGroup>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Cell_Warranty_Btn_1"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:text="@string/feed_back_submit"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_finsh"
                android:id="@+id/button3" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>