<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical">


    <include
        android:id="@+id/layout"
        layout="@layout/header_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sub_owner_user_name"
            android:textColor="@color/black_text" />

        <EditText
            android:id="@+id/name_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/add_owner_hint_name_str"
            android:textColor="@color/gray_text"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/sure"
        style="@style/Cell_Warranty_Btn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/bg_finsh"
        android:padding="10dp"
        android:text="@string/submit" />

</LinearLayout>