<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@mipmap/tenement_back"
        android:orientation="horizontal">


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tenement_kind"
                            android:textColor="@color/black_text" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_background" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tenement_address"
                            android:textColor="@color/black_text" />

                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_background" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tenement_link_people"
                            android:textColor="@color/black_text" />

                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_background" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tenement_link_num"
                            android:textColor="@color/black_text" />

                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/tenement_my_role"
                        android:textColor="@color/black_text" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tenement_gate_set"
                            android:textColor="@color/black_text" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_background" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tenement_gate_key"
                            android:textColor="@color/black_text" />

                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_background" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tenement_gate_start"
                            android:textColor="@color/black_text" />

                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_background" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/tenement_gate_manage"
                            android:textColor="@color/black_text" />

                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>