<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical">

    <include
        android:id="@+id/layout"
        layout="@layout/header_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/build_name"
                    android:textColor="@color/black_text" />


                <EditText
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/hint_build_name"
                    android:textColor="@color/gray_text"
                    android:textSize="14sp"
                    android:id="@+id/build_title" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/is_public_door"
                    android:textColor="@color/black_text" />

                <ToggleButton

                    android:id="@+id/toggle_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:background="@android:color/transparent"
                    android:button="@drawable/ios_check_btn"
                    android:checked="false" />


               <!-- <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/message_content"
                    android:textColor="@color/black_text" />

                <EditText
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/hint_message_content"
                    android:textColor="@color/gray_text"
                    android:textSize="14sp"
                    android:id="@+id/msg_content" />-->
            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Cell_Warranty_Btn_1"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:text="@string/feed_back_submit"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_finsh"
                android:id="@+id/add_btn" />



        </LinearLayout>




</LinearLayout>