<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <include
        android:id="@+id/layout"
        layout="@layout/header_toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/manage_layout_height"
        android:background="@color/white"
        android:paddingLeft="@dimen/manage_padding_left"
        android:orientation="horizontal"
        android:id="@+id/device_reapair_layout">

        <ImageView
            android:id="@+id/owner_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/shebeibaoxiu">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_toRightOf="@+id/owner_img"
            android:layout_marginLeft="@dimen/manage_margin_left"
            android:text="@string/device_repair"/>

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/manage_margin_right"
            android:src="@mipmap/right">

        </ImageView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/manage_layout_height"
        android:background="@color/white"
        android:paddingLeft="@dimen/manage_padding_left"
        android:layout_marginTop="@dimen/manage_margin_top"
        android:orientation="horizontal"
        android:id="@+id/complain_layout">

        <ImageView
            android:id="@+id/tenement_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/yezhutoushu">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_toRightOf="@+id/tenement_img"
            android:layout_marginLeft="@dimen/manage_margin_left"
            android:text="@string/complain"/>

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/manage_margin_right"
            android:src="@mipmap/right">

        </ImageView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/manage_layout_height"
        android:background="@color/white"
        android:paddingLeft="@dimen/manage_padding_left"
        android:layout_marginTop="@dimen/manage_margin_top"
        android:orientation="horizontal"
        android:id="@+id/message_push_layout">

        <ImageView
            android:id="@+id/car_img"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/xinxigonggao">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_toRightOf="@+id/car_img"
            android:layout_marginLeft="@dimen/manage_margin_left"
            android:text="@string/message_push"/>

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/manage_margin_right"
            android:src="@mipmap/right">

        </ImageView>

    </RelativeLayout>


</LinearLayout>